# tonic-etcd-microservice

./: Cargo.toml  build.rs
proto/: example.proto
src/: client.rs  lib.rs  main.rs  server.rs
src/discovery/: register.rs
