[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.14.0"
prost = "0.13.4"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
